# neuralmind

./: .CLAUDE-PROJECTS.md  .gitignore  .neuralmind-team-memory.json  .pre-commit-config.yaml  .release-please-config.json  0_Test (Python 3.11).txt  1_Test (Python 3.12).txt  2_Test (Python 3.10).txt  3_Build Package.txt  4_Lint.txt  5_Type Check.txt  BENCHMARK_TURBOVEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPENHUMAN.md  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.19.0.md  RELEASE_NOTES_v0.20.0.md  RELEASE_NOTES_v0.21.0.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.23.0.md  RELEASE_NOTES_v0.24.0.md  RELEASE_NOTES_v0.25.0.md  RELEASE_NOTES_v0.26.0.md  RELEASE_NOTES_v0.27.0.md  RELEASE_NOTES_v0.28.0.md  RELEASE_NOTES_v0.29.0.md  RELEASE_NOTES_v0.3.2.md  (+36 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  community-benchmark.yml  feature_request.md
.github/workflows/: auto-fix.yml  bench-public.yml  chromadb-cve-watch.yml  ci-benchmark.yml  ci.yml  docker-publish.yml  issue-labeler.yml  neuralmind-autoindex.yml  release-please.yml  release.yml  sbom.yml  sync-wiki.yml  update-chart.yml  validate-community-benchmarks.yml
Build Package/: system.txt
Lint/: system.txt
Test (Python 3.10)/: system.txt
Test (Python 3.11)/: system.txt
Test (Python 3.12)/: system.txt
Type Check/: system.txt
bench/public/: report.md  results.json
bench/swe_bench/: REPRODUCE.md
benchmarks/: README.md  run_all.sh
docs/: BUSINESS-CASE.md  COMPATIBILITY.md  COMPLIANCE-SUMMARY.md  CRITIQUE-COVERAGE.md  DEPLOYMENT-GUIDE.md  DOCUMENTATION-AUDIT.md  DOCUMENTATION-PROCESS.md  ENTERPRISE.md  FUTURE-PROOFING-PLAN.md  HANDOFF-2026-05-19.md  HANDOFF-v0.6.1.md  HONEST-ASSESSMENT.md  LINKEDIN-POST-DRAFT.md  NEXT-RELEASE-PLAN.md  PILOT-BRD.md  RECORDING-DEMO.md  SCREENCAST-v0.6.0.md  SCREENCAST-v0.6.1.md  SCREENCAST-v0.7.0.md  SECURITY-GUIDE.md  UPGRADING.md  VERSION-STRATEGY.md  about.html  brain_like_learning.md  community-benchmarks.json  community-benchmarks.schema.json  index.html  robots.txt  sitemap.xml
docs/assets/: README.md
docs/benchmarks/: dashboard.css  dashboard.js  index.html  public.md
docs/community/: README.md  SETUP.md  reddit-roundup.html
docs/comparisons/: README.md  context-engineering-stack.md  vs-aider-repomap.md  vs-claude-projects.md  vs-cody.md  vs-continue-cline.md  vs-cursor-codebase.md  vs-github-copilot.md  vs-headroom.md  vs-langchain-llamaindex.md  vs-long-context.md  vs-prompt-caching.md  vs-rag.md  vs-treesitter-ctags.md  vs-windsurf-codeium.md
docs/launch/: NEXT-SESSION.md  README.md  awesome-mcp-servers.md  hn-warmup-comments.md  r-localllama.md  reddit-seed-kit.md  show-hn.md
docs/plans/: 2026-06-05-graph-backend-decoupling.md  2026-06-06-onboarding-lift-eval-handoff.md  2026-06-06-post-e1.5-team-memory-handoff.md  2026-06-10-future-proofing-prd-pack.md  2026-06-10-prd4-memory-namespaces.md
docs/prd/: answerability-judge.md  c-cpp-extractor.md  chromadb-free-by-default.md  competitor-benchmark.md  csharp-extractor.md  language-extractor-expansion.md  php-extractor.md  public-benchmark.md  ruby-extractor.md  team-memory.md
docs/templates/: golden_queries_template.json
docs/use-cases/: README.md  air-gapped.md  always-on.md  any-llm.md  benchmark-your-repo.md  branch-isolated-memory.md  chromadb-free-local.md  claude-code.md  cost-optimization.md  growing-monorepo.md  install-paths.md  multi-agent.md  offline-regulated.md  review-before-push.md  unified-stack.md  vs-code-native-intelligence.md  zero-install-indexing.md
docs/wiki/: API-Reference.md  Architecture.md  Benchmarks.md  CLI-Reference.md  Comparisons.md  Enterprise-Features.md  FAQ.md  Home.md  Installation.md  Integration-Guide.md  Learning-Guide.md  Limits-and-Failure-Modes.md  Scheduling-Guide.md  Setup-Guide.md  Troubleshooting.md  Usage-Guide.md  Use-Cases.md
editors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
evals/faithfulness/: PLAN.md  README.md  harness.py  queries.json  runner.py  schema.md
evals/onboarding/: README.md  __init__.py  harness.py  runner.py  seed_history.json
neuralmind/: __init__.py  _demo_report.py  audit.py  audit_integration.py  backend_manager.py  bm25.py  cli.py  compressors.py  config.py  context_selector.py  core.py  daemon.py  daemon_client.py  doctor.py  embedder.py  embedding_backend.py  embedding_models.py  event_bus.py  event_log.py  graphgen.py  hooks.py  hybrid_context.py  in_memory_backend.py  ir.py  local_client.py  mcp_install.py  mcp_security.py  mcp_server.py  memory.py  namespaces.py  onnx_embedder.py  output_cache.py  precision.py  probe.py  quality.py  relevance.py  reranker.py  self_improve.py  server.py  synapse_memory.py  (+5 more)
optimization/: experiment.py  results.tsv
scripts/: demo.py  demo.sh  generate_chart.py  render_community_table.py  setup-discussions.sh  smoke_imports.py  validate_community_benchmarks.py  weekly_maintenance.sh
tests/: conftest.py  test_answerability_judge.py  test_audit.py  test_auto_backend.py  test_backend_manager.py  test_benchmark_regression.py  test_chromadb_free_import.py  test_cli.py  test_competitor_adapter.py  test_compressors.py  test_config.py  test_context_selector.py  test_core.py  test_core_additional.py  test_daemon.py  test_doctor.py  test_embedder.py  test_eval_faithfulness.py  test_event_bus.py  test_event_log.py  test_graph_view.py  test_graphgen.py  test_hooks.py  test_hooks_synapses.py  test_integration_retrieval.py  test_integration_security_backend_audit.py  test_ir.py  test_local_client.py  test_mcp_install.py  test_mcp_security.py  test_mcp_server.py  test_memory.py  test_memory_persistence.py  test_onboarding_eval.py  test_onnx_embedder.py  test_output_cache.py  test_packaging_backends.py  test_parity_gate.py  test_polyglot_fixtures.py  test_precision.py  (+20 more)
(+183 files in other folders)
