[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralmind"
version = "0.1.0"
description = "Adaptive Neural Knowledge System - Achieve 40-70x token reduction for AI code understanding"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Agent Zero", email = "agent@example.com" }
]
keywords = [
    "ai",
    "llm",
    "code-understanding",
    "knowledge-graph",
    "token-reduction",
    "semantic-search",
    "mcp",
    "chromadb",
    "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.1.0"
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[project.scripts]
neuralmind = "neuralmind.cli:main"
neuralmind-mcp = "neuralmind.mcp_server:main"

[project.urls]
Homepage = "https://github.com/agent-zero/neuralmind"
Documentation = "https://github.com/agent-zero/neuralmind#readme"
Repository = "https://github.com/agent-zero/neuralmind.git"
Issues = "https://github.com/agent-zero/neuralmind/issues"

[tool.hatch.build.targets.wheel]
packages = ["neuralmind"]

[tool.hatch.build.targets.sdist]
include = [
    "neuralmind/**/*.py",
    "README.md",
    "LICENSE"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
