[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralmind"
version = "0.1.0"
description = "Adaptive Neural Knowledge System - Achieve 40-70x token reduction for AI code understanding"
readme = "README.md"
license = "MIT"
authors = [
    { name = "dfrostar" }
]
maintainers = [
    { name = "dfrostar" }
]
keywords = [
    "ai",
    "llm",
    "code-understanding",
    "knowledge-graph",
    "token-reduction",
    "semantic-search",
    "mcp",
    "chromadb",
    "embeddings",
    "context-window",
    "ai-coding-assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.1.0"
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]
all = [
    "neuralmind[mcp,dev]"
]

[project.scripts]
neuralmind = "neuralmind.cli:main"
neuralmind-mcp = "neuralmind.mcp_server:main"

[project.urls]
Homepage = "https://github.com/dfrostar/neuralmind"
Documentation = "https://github.com/dfrostar/neuralmind/wiki"
Repository = "https://github.com/dfrostar/neuralmind.git"
Issues = "https://github.com/dfrostar/neuralmind/issues"
Changelog = "https://github.com/dfrostar/neuralmind/releases"

[tool.hatch.build.targets.wheel]
packages = ["neuralmind"]

[tool.hatch.build.targets.sdist]
include = [
    "neuralmind/**/*.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

# PyPI Trusted Publishing Configuration
# To enable trusted publishing on PyPI:
# 1. Go to https://pypi.org/manage/project/neuralmind/settings/publishing/
# 2. Add a new trusted publisher with:
#    - Owner: dfrostar
#    - Repository: neuralmind
#    - Workflow: release.yml
#    - Environment: pypi

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert allowed in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["neuralmind"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
